# vinisto

./: .gitignore  .pydocstylerc  AUTHORS  ChangeLog  MANIFEST.in  Readme.rst  TODO  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  temp  tox.ini
docs/: History.rst  Readme.rst  architecture.rst
tests/: .test_translate.py.swo  .test_translate.py.swp  test_intent_base.py  test_nltk_base.py  test_translate.py
tests/features/: parse_features.feature
tests/rules/: test_rule.feature
tests/unit/: conftest.py  test_deduction.py  test_deduction_engine.py  test_entry_point.py  test_feature_parser.py  test_import.py  test_ke_generation.py  test_models.py
tests/unit/vinisto/: test_ke_generation.py
vinisto/: __init__.py  abstract.py  config.py  deduction.py  engine.py  facts.py  fuzzy_cucumber.py  intent.py  language.py  main.py  models.py  steps.py  utils.py
vinisto/consumers/: mqtt.py  rest.py
vinisto/deduction/: __init__.py
vinisto/engine/: __init__.py  facts.py  steps.py
vinisto/i18n/: __init__.py  tokenizer.py  vinisto.pot
vinisto/mremote/: __init__.py  base_colors.json  mremote.py
vinisto/mremote/templates/: .main.html.swp  index.html
vinisto/plugins/: complex_ir.py  gpio.py  ir.py  markov.py  repeat.py  time.py
vinisto/services/: __init__.py  api.py  connector.py  infrared.py  mqtt.py  voice.py
vinisto/services/connectors/: rest.py  voice.py
vinisto/static/: configuration.html  index.html
vinisto/stt/: google_stt.py
vinisto/templates/: index.html
vinisto/tts/: google_tts.py
vinisto/voice/: abstract.py
(+12 files in other folders)
