[metadata]
name = vinisto
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Your personal AI
description-file = Readme.rst
home-page = https://github.com/XayOn/vinisto
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only


keywords =
    vinisto, speech_recognition, ai,

[files]
packages =
    vinisto

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain


[entry_points]
console_scripts =
    vinisto = vinisto.deduction:run
